src/cool/parser/CoolParser.java
// Generated from CoolParser.g4 by ANTLR 4.7.1

    package cool.parser;

import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class CoolParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.7.1", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		ERROR=1, WS=2, MULTI_COMM_BEGIN=3, LESS_EQ=4, EQ_MORE=5, DIV=6, ATRB=7, 
		EQL=8, COMMA=9, MUL=10, O_RPAR=11, C_RPAR=12, O_ACOL=13, C_ACOL=14, TWO_DOTS=15, 
		LESS=16, PLUS=17, MINUS=18, DOT_COL=19, DOT=20, TILDA=21, IF=22, THEN=23, 
		ELSE=24, FI=25, TRUE=26, FALSE=27, CLASS=28, INHERITS=29, ISVOID=30, LET=31, 
		LOOP=32, POOL=33, WHILE=34, CASE=35, ESAC=36, NEW=37, OF=38, NOT=39, A_ROUND=40, 
		IN=41, SIMPLE_COMM=42, ID_NAME=43, TYPE_NAME=44, INT_LITERAL=45, STRING=46, 
		STUFF=47, STUFF1=48, WHATEV=49;
	public static final int
		RULE_program = 0, RULE_class_def = 1, RULE_atribute_def = 2, RULE_param_def = 3, 
		RULE_func_def = 4, RULE_expr = 5, RULE_case_attr = 6, RULE_let_attr = 7;
	public static final String[] ruleNames = {
		"program", "class_def", "atribute_def", "param_def", "func_def", "expr", 
		"case_attr", "let_attr"
	};

	private static final String[] _LITERAL_NAMES = {
		null, null, null, "'(*'", "'<='", "'=>'", "'/'", "'<-'", "'='", "','", 
		"'*'", "'('", "')'", "'{'", "'}'", "':'", "'<'", "'+'", "'-'", "';'", 
		"'.'", "'~'", "'if'", "'then'", "'else'", "'fi'", "'true'", "'false'", 
		"'class'", "'inherits'", "'isvoid'", "'let'", "'loop'", "'pool'", "'while'", 
		"'case'", "'esac'", "'new'", "'of'", "'not'", "'@'", "'in'"
	};
	private static final String[] _SYMBOLIC_NAMES = {
		null, "ERROR", "WS", "MULTI_COMM_BEGIN", "LESS_EQ", "EQ_MORE", "DIV", 
		"ATRB", "EQL", "COMMA", "MUL", "O_RPAR", "C_RPAR", "O_ACOL", "C_ACOL", 
		"TWO_DOTS", "LESS", "PLUS", "MINUS", "DOT_COL", "DOT", "TILDA", "IF", 
		"THEN", "ELSE", "FI", "TRUE", "FALSE", "CLASS", "INHERITS", "ISVOID", 
		"LET", "LOOP", "POOL", "WHILE", "CASE", "ESAC", "NEW", "OF", "NOT", "A_ROUND", 
		"IN", "SIMPLE_COMM", "ID_NAME", "TYPE_NAME", "INT_LITERAL", "STRING", 
		"STUFF", "STUFF1", "WHATEV"
	};
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "CoolParser.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public CoolParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}
	public static class ProgramContext extends ParserRuleContext {
		public Class_defContext class_def;
		public List<Class_defContext> classList = new ArrayList<Class_defContext>();
		public TerminalNode EOF() { return getToken(CoolParser.EOF, 0); }
		public List<Class_defContext> class_def() {
			return getRuleContexts(Class_defContext.class);
		}
		public Class_defContext class_def(int i) {
			return getRuleContext(Class_defContext.class,i);
		}
		public ProgramContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_program; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof CoolParserListener ) ((CoolParserListener)listener).enterProgram(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof CoolParserListener ) ((CoolParserListener)listener).exitProgram(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof CoolParserVisitor ) return ((CoolParserVisitor<? extends T>)visitor).visitProgram(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ProgramContext program() throws RecognitionException {
		ProgramContext _localctx = new ProgramContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_program);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(17); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(16);
				((ProgramContext)_localctx).class_def = class_def();
				((ProgramContext)_localctx).classList.add(((ProgramContext)_localctx).class_def);
				}
				}
				setState(19); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( _la==CLASS );
			setState(21);
			match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Class_defContext extends ParserRuleContext {
		public Token className;
		public Token parentName;
		public TerminalNode CLASS() { return getToken(CoolParser.CLASS, 0); }
		public TerminalNode O_ACOL() { return getToken(CoolParser.O_ACOL, 0); }
		public TerminalNode C_ACOL() { return getToken(CoolParser.C_ACOL, 0); }
		public TerminalNode DOT_COL() { return getToken(CoolParser.DOT_COL, 0); }
		public List<TerminalNode> TYPE_NAME() { return getTokens(CoolParser.TYPE_NAME); }
		public TerminalNode TYPE_NAME(int i) {
			return getToken(CoolParser.TYPE_NAME, i);
		}
		public TerminalNode INHERITS() { return getToken(CoolParser.INHERITS, 0); }
		public List<Atribute_defContext> atribute_def() {
			return getRuleContexts(Atribute_defContext.class);
		}
		public Atribute_defContext atribute_def(int i) {
			return getRuleContext(Atribute_defContext.class,i);
		}
		public List<Func_defContext> func_def() {
			return getRuleContexts(Func_defContext.class);
		}
		public Func_defContext func_def(int i) {
			return getRuleContext(Func_defContext.class,i);
		}
		public Class_defContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_class_def; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof CoolParserListener ) ((CoolParserListener)listener).enterClass_def(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof CoolParserListener ) ((CoolParserListener)listener).exitClass_def(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof CoolParserVisitor ) return ((CoolParserVisitor<? extends T>)visitor).visitClass_def(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Class_defContext class_def() throws RecognitionException {
		Class_defContext _localctx = new Class_defContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_class_def);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(23);
			match(CLASS);
			setState(24);
			((Class_defContext)_localctx).className = match(TYPE_NAME);
			setState(27);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==INHERITS) {
				{
				setState(25);
				match(INHERITS);
				setState(26);
				((Class_defContext)_localctx).parentName = match(TYPE_NAME);
				}
			}

			setState(29);
			match(O_ACOL);
			setState(34);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==ID_NAME) {
				{
				setState(32);
				_errHandler.sync(this);
				switch ( getInterpreter().adaptivePredict(_input,2,_ctx) ) {
				case 1:
					{
					setState(30);
					atribute_def();
					}
					break;
				case 2:
					{
					setState(31);
					func_def();
					}
					break;
				}
				}
				setState(36);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(37);
			match(C_ACOL);
			setState(38);
			match(DOT_COL);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Atribute_defContext extends ParserRuleContext {
		public Token atribName;
		public Token atribType;
		public ExprContext atribInit;
		public TerminalNode TWO_DOTS() { return getToken(CoolParser.TWO_DOTS, 0); }
		public TerminalNode DOT_COL() { return getToken(CoolParser.DOT_COL, 0); }
		public TerminalNode ID_NAME() { return getToken(CoolParser.ID_NAME, 0); }
		public TerminalNode TYPE_NAME() { return getToken(CoolParser.TYPE_NAME, 0); }
		public TerminalNode ATRB() { return getToken(CoolParser.ATRB, 0); }
		public ExprContext expr() {
			return getRuleContext(ExprContext.class,0);
		}
		public Atribute_defContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_atribute_def; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof CoolParserListener ) ((CoolParserListener)listener).enterAtribute_def(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof CoolParserListener ) ((CoolParserListener)listener).exitAtribute_def(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof CoolParserVisitor ) return ((CoolParserVisitor<? extends T>)visitor).visitAtribute_def(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Atribute_defContext atribute_def() throws RecognitionException {
		Atribute_defContext _localctx = new Atribute_defContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_atribute_def);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(40);
			((Atribute_defContext)_localctx).atribName = match(ID_NAME);
			setState(41);
			match(TWO_DOTS);
			setState(42);
			((Atribute_defContext)_localctx).atribType = match(TYPE_NAME);
			setState(45);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==ATRB) {
				{
				setState(43);
				match(ATRB);
				setState(44);
				((Atribute_defContext)_localctx).atribInit = expr(0);
				}
			}

			setState(47);
			match(DOT_COL);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Param_defContext extends ParserRuleContext {
		public Token paramName;
		public Token paramType;
		public TerminalNode TWO_DOTS() { return getToken(CoolParser.TWO_DOTS, 0); }
		public TerminalNode ID_NAME() { return getToken(CoolParser.ID_NAME, 0); }
		public TerminalNode TYPE_NAME() { return getToken(CoolParser.TYPE_NAME, 0); }
		public Param_defContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_param_def; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof CoolParserListener ) ((CoolParserListener)listener).enterParam_def(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof CoolParserListener ) ((CoolParserListener)listener).exitParam_def(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof CoolParserVisitor ) return ((CoolParserVisitor<? extends T>)visitor).visitParam_def(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Param_defContext param_def() throws RecognitionException {
		Param_defContext _localctx = new Param_defContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_param_def);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(49);
			((Param_defContext)_localctx).paramName = match(ID_NAME);
			setState(50);
			match(TWO_DOTS);
			setState(51);
			((Param_defContext)_localctx).paramType = match(TYPE_NAME);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Func_defContext extends ParserRuleContext {
		public Token methodName;
		public Token methodReturnType;
		public ExprContext expr;
		public List<ExprContext> body = new ArrayList<ExprContext>();
		public Param_defContext param_def;
		public List<Param_defContext> parametersList = new ArrayList<Param_defContext>();
		public TerminalNode O_RPAR() { return getToken(CoolParser.O_RPAR, 0); }
		public TerminalNode C_RPAR() { return getToken(CoolParser.C_RPAR, 0); }
		public TerminalNode TWO_DOTS() { return getToken(CoolParser.TWO_DOTS, 0); }
		public TerminalNode O_ACOL() { return getToken(CoolParser.O_ACOL, 0); }
		public TerminalNode C_ACOL() { return getToken(CoolParser.C_ACOL, 0); }
		public TerminalNode DOT_COL() { return getToken(CoolParser.DOT_COL, 0); }
		public TerminalNode ID_NAME() { return getToken(CoolParser.ID_NAME, 0); }
		public TerminalNode TYPE_NAME() { return getToken(CoolParser.TYPE_NAME, 0); }
		public List<ExprContext> expr() {
			return getRuleContexts(ExprContext.class);
		}
		public ExprContext expr(int i) {
			return getRuleContext(ExprContext.class,i);
		}
		public List<Param_defContext> param_def() {
			return getRuleContexts(Param_defContext.class);
		}
		public Param_defContext param_def(int i) {
			return getRuleContext(Param_defContext.class,i);
		}
		public List<TerminalNode> COMMA() { return getTokens(CoolParser.COMMA); }
		public TerminalNode COMMA(int i) {
			return getToken(CoolParser.COMMA, i);
		}
		public Func_defContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_func_def; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof CoolParserListener ) ((CoolParserListener)listener).enterFunc_def(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof CoolParserListener ) ((CoolParserListener)listener).exitFunc_def(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof CoolParserVisitor ) return ((CoolParserVisitor<? extends T>)visitor).visitFunc_def(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Func_defContext func_def() throws RecognitionException {
		Func_defContext _localctx = new Func_defContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_func_def);
		int _la;
		try {
			int _alt;
			setState(90);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,8,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(53);
				((Func_defContext)_localctx).methodName = match(ID_NAME);
				setState(54);
				match(O_RPAR);
				setState(55);
				match(C_RPAR);
				setState(56);
				match(TWO_DOTS);
				setState(57);
				((Func_defContext)_localctx).methodReturnType = match(TYPE_NAME);
				setState(58);
				match(O_ACOL);
				setState(60); 
				_errHandler.sync(this);
				_la = _input.LA(1);
				do {
					{
					{
					setState(59);
					((Func_defContext)_localctx).expr = expr(0);
					((Func_defContext)_localctx).body.add(((Func_defContext)_localctx).expr);
					}
					}
					setState(62); 
					_errHandler.sync(this);
					_la = _input.LA(1);
				} while ( (((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << O_RPAR) | (1L << O_ACOL) | (1L << TILDA) | (1L << IF) | (1L << TRUE) | (1L << FALSE) | (1L << ISVOID) | (1L << LET) | (1L << WHILE) | (1L << CASE) | (1L << NEW) | (1L << NOT) | (1L << ID_NAME) | (1L << INT_LITERAL) | (1L << STRING))) != 0) );
				setState(64);
				match(C_ACOL);
				setState(65);
				match(DOT_COL);
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(67);
				((Func_defContext)_localctx).methodName = match(ID_NAME);
				setState(68);
				match(O_RPAR);
				setState(74);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,6,_ctx);
				while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
					if ( _alt==1 ) {
						{
						{
						setState(69);
						((Func_defContext)_localctx).param_def = param_def();
						((Func_defContext)_localctx).parametersList.add(((Func_defContext)_localctx).param_def);
						setState(70);
						match(COMMA);
						}
						} 
					}
					setState(76);
					_errHandler.sync(this);
					_alt = getInterpreter().adaptivePredict(_input,6,_ctx);
				}
				setState(77);
				((Func_defContext)_localctx).param_def = param_def();
				((Func_defContext)_localctx).parametersList.add(((Func_defContext)_localctx).param_def);
				setState(78);
				match(C_RPAR);
				setState(79);
				match(TWO_DOTS);
				setState(80);
				((Func_defContext)_localctx).methodReturnType = match(TYPE_NAME);
				setState(81);
				match(O_ACOL);
				setState(83); 
				_errHandler.sync(this);
				_la = _input.LA(1);
				do {
					{
					{
					setState(82);
					((Func_defContext)_localctx).expr = expr(0);
					((Func_defContext)_localctx).body.add(((Func_defContext)_localctx).expr);
					}
					}
					setState(85); 
					_errHandler.sync(this);
					_la = _input.LA(1);
				} while ( (((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << O_RPAR) | (1L << O_ACOL) | (1L << TILDA) | (1L << IF) | (1L << TRUE) | (1L << FALSE) | (1L << ISVOID) | (1L << LET) | (1L << WHILE) | (1L << CASE) | (1L << NEW) | (1L << NOT) | (1L << ID_NAME) | (1L << INT_LITERAL) | (1L << STRING))) != 0) );
				setState(87);
				match(C_ACOL);
				setState(88);
				match(DOT_COL);
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ExprContext extends ParserRuleContext {
		public ExprContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_expr; }
	 
		public ExprContext() { }
		public void copyFrom(ExprContext ctx) {
			super.copyFrom(ctx);
		}
	}
	public static class TildaContext extends ExprContext {
		public ExprContext exp;
		public TerminalNode TILDA() { return getToken(CoolParser.TILDA, 0); }
		public ExprContext expr() {
			return getRuleContext(ExprContext.class,0);
		}
		public TildaContext(ExprContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof CoolParserListener ) ((CoolParserListener)listener).enterTilda(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof CoolParserListener ) ((CoolParserListener)listener).exitTilda(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof CoolParserVisitor ) return ((CoolParserVisitor<? extends T>)visitor).visitTilda(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class Mul_aritmContext extends ExprContext {
		public ExprContext leftOp;
		public ExprContext rightOp;
		public TerminalNode MUL() { return getToken(CoolParser.MUL, 0); }
		public List<ExprContext> expr() {
			return getRuleContexts(ExprContext.class);
		}
		public ExprContext expr(int i) {
			return getRuleContext(ExprContext.class,i);
		}
		public Mul_aritmContext(ExprContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof CoolParserListener ) ((CoolParserListener)listener).enterMul_aritm(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof CoolParserListener ) ((CoolParserListener)listener).exitMul_aritm(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof CoolParserVisitor ) return ((CoolParserVisitor<? extends T>)visitor).visitMul_aritm(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class StringContext extends ExprContext {
		public TerminalNode STRING() { return getToken(CoolParser.STRING, 0); }
		public StringContext(ExprContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof CoolParserListener ) ((CoolParserListener)listener).enterString(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof CoolParserListener ) ((CoolParserListener)listener).exitString(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof CoolParserVisitor ) return ((CoolParserVisitor<? extends T>)visitor).visitString(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class IsvoidContext extends ExprContext {
		public ExprContext exp;
		public TerminalNode ISVOID() { return getToken(CoolParser.ISVOID, 0); }
		public ExprContext expr() {
			return getRuleContext(ExprContext.class,0);
		}
		public IsvoidContext(ExprContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof CoolParserListener ) ((CoolParserListener)listener).enterIsvoid(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof CoolParserListener ) ((CoolParserListener)listener).exitIsvoid(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof CoolParserVisitor ) return ((CoolParserVisitor<? extends T>)visitor).visitIsvoid(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class WhileContext extends ExprContext {
		public ExprContext cond;
		public ExprContext body;
		public TerminalNode WHILE() { return getToken(CoolParser.WHILE, 0); }
		public TerminalNode LOOP() { return getToken(CoolParser.LOOP, 0); }
		public TerminalNode POOL() { return getToken(CoolParser.POOL, 0); }
		public List<ExprContext> expr() {
			return getRuleContexts(ExprContext.class);
		}
		public ExprContext expr(int i) {
			return getRuleContext(ExprContext.class,i);
		}
		public WhileContext(ExprContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof CoolParserListener ) ((CoolParserListener)listener).enterWhile(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof CoolParserListener ) ((CoolParserListener)listener).exitWhile(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof CoolParserVisitor ) return ((CoolParserVisitor<? extends T>)visitor).visitWhile(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class Func_callContext extends ExprContext {
		public Token funcName;
		public ExprContext expr;
		public List<ExprContext> paramsList = new ArrayList<ExprContext>();
		public TerminalNode O_RPAR() { return getToken(CoolParser.O_RPAR, 0); }
		public TerminalNode C_RPAR() { return getToken(CoolParser.C_RPAR, 0); }
		public TerminalNode ID_NAME() { return getToken(CoolParser.ID_NAME, 0); }
		public List<ExprContext> expr() {
			return getRuleContexts(ExprContext.class);
		}
		public ExprContext expr(int i) {
			return getRuleContext(ExprContext.class,i);
		}
		public List<TerminalNode> COMMA() { return getTokens(CoolParser.COMMA); }
		public TerminalNode COMMA(int i) {
			return getToken(CoolParser.COMMA, i);
		}
		public Func_callContext(ExprContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof CoolParserListener ) ((CoolParserListener)listener).enterFunc_call(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof CoolParserListener ) ((CoolParserListener)listener).exitFunc_call(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof CoolParserVisitor ) return ((CoolParserVisitor<? extends T>)visitor).visitFunc_call(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class NotContext extends ExprContext {
		public ExprContext exp;
		public TerminalNode NOT() { return getToken(CoolParser.NOT, 0); }
		public ExprContext expr() {
			return getRuleContext(ExprContext.class,0);
		}
		public NotContext(ExprContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof CoolParserListener ) ((CoolParserListener)listener).enterNot(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof CoolParserListener ) ((CoolParserListener)listener).exitNot(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof CoolParserVisitor ) return ((CoolParserVisitor<? extends T>)visitor).visitNot(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class Plus_aritmContext extends ExprContext {
		public ExprContext leftOp;
		public ExprContext rightOp;
		public TerminalNode PLUS() { return getToken(CoolParser.PLUS, 0); }
		public List<ExprContext> expr() {
			return getRuleContexts(ExprContext.class);
		}
		public ExprContext expr(int i) {
			return getRuleContext(ExprContext.class,i);
		}
		public Plus_aritmContext(ExprContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof CoolParserListener ) ((CoolParserListener)listener).enterPlus_aritm(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof CoolParserListener ) ((CoolParserListener)listener).exitPlus_aritm(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof CoolParserVisitor ) return ((CoolParserVisitor<? extends T>)visitor).visitPlus_aritm(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class BlockContext extends ExprContext {
		public ExprContext expr;
		public List<ExprContext> blockList = new ArrayList<ExprContext>();
		public TerminalNode O_ACOL() { return getToken(CoolParser.O_ACOL, 0); }
		public TerminalNode C_ACOL() { return getToken(CoolParser.C_ACOL, 0); }
		public List<TerminalNode> DOT_COL() { return getTokens(CoolParser.DOT_COL); }
		public TerminalNode DOT_COL(int i) {
			return getToken(CoolParser.DOT_COL, i);
		}
		public List<ExprContext> expr() {
			return getRuleContexts(ExprContext.class);
		}
		public ExprContext expr(int i) {
			return getRuleContext(ExprContext.class,i);
		}
		public BlockContext(ExprContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof CoolParserListener ) ((CoolParserListener)listener).enterBlock(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof CoolParserListener ) ((CoolParserListener)listener).exitBlock(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof CoolParserVisitor ) return ((CoolParserVisitor<? extends T>)visitor).visitBlock(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class LetContext extends ExprContext {
		public Let_attrContext let_attr;
		public List<Let_attrContext> letAttrib = new ArrayList<Let_attrContext>();
		public ExprContext body;
		public TerminalNode LET() { return getToken(CoolParser.LET, 0); }
		public TerminalNode IN() { return getToken(CoolParser.IN, 0); }
		public List<Let_attrContext> let_attr() {
			return getRuleContexts(Let_attrContext.class);
		}
		public Let_attrContext let_attr(int i) {
			return getRuleContext(Let_attrContext.class,i);
		}
		public ExprContext expr() {
			return getRuleContext(ExprContext.class,0);
		}
		public List<TerminalNode> COMMA() { return getTokens(CoolParser.COMMA); }
		public TerminalNode COMMA(int i) {
			return getToken(CoolParser.COMMA, i);
		}
		public LetContext(ExprContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof CoolParserListener ) ((CoolParserListener)listener).enterLet(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
